# nokevair

./: .gitignore  Blog.toml  Cargo.toml  ExampleConfig.toml  LICENSE  README.md  test.lua
example/: Config.toml
example/render/: format_base.html.tera
example/render/people/: focus.lua  format.html.tera
example/sim/: 0.lua
sim/: 0.lua
src/: app.rs  conv.rs  hyper_boilerplate.rs  main.rs  utils.rs
src/app/: ctx.rs  error.rs  log.rs  login.rs  lua.rs  responses.rs  sim.rs  state.rs  templates.rs
src/app/ctx/: blog.rs  cfg.rs  log.rs
src/app/lua/: render.rs  sim.rs  version.rs
state/: 0.msgpack  1.msgpack  2.msgpack
static/: login.js  main.css
static/admin/: hljs.css  hljs.js  index.css  sim_files.css
static/public/: blog.css  blog_index.css  crypto.js  login.js  main.css  test.txt
templates/: about.html.tera  base.html.tera  blog_base.html.tera  blog_index.html.tera  login.html.tera  state.html.tera
templates/admin/: filtered_log.html.tera  index.html.tera  sim_files.html.tera
templates/blog/: admin_controls.html.tera  hello_world.html.tera  serial_ecs.html.tera
templates/error/: 400.html.tera  401.html.tera  404.html.tera  404_no_state.html.tera  500.html.tera
