[package]
name = "nokevair"
version = "0.1.0"
authors = ["nokevair <64569057+nokevair@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.0"
tokio = { version = "0.2", features = ["time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.6.1"
