[package]
name = "nokevair"
version = "0.1.0"
authors = ["nokevair <64569057+nokevair@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
hyper = "0.13.0"
hyper-staticfile = "0.5.2"
mime_guess = "2"
tera = { version = "1.2.0", default-features = false }
tokio = { version = "0.2", features = ["time", "fs", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.6.1"
