[package]
name = "nokevair"
version = "0.1.0"
authors = ["nokevair <64569057+nokevair@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
chrono = "0.4.11"
hex = "0.4.2"
hyper = "0.13.0"
hyper-staticfile = "0.5.2"
mime_guess = "2"
rand = "0.7.3"
rlua = "0.17.0"
rmpv = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.52"
serde_urlencoded = "0.6.1"
sha2 = "0.8.1"
tera = { version = "1.2.0", default-features = false }
tokio = { version = "0.2", features = ["time", "fs", "macros"] }
toml = "0.5.6"
vec_map = "0.8.2"
